# internal/matrix/endpoints/update_matrix.go
@@ -5,7 +5,6 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
-	"time"
 
 	"github.com/go-kit/kit/endpoint"
 	kithttp "github.com/go-kit/kit/transport/http"
@@ -15,24 +14,30 @@ import (
 	"github.com/sumelms/microservice-course/pkg/validator"
 )
 
-type updateMatrixRequest struct {
+type UpdateMatrixRequest struct {
 	UUID        uuid.UUID `json:"uuid"        validate:"required"`
-	Code        string    `json:"code"`
+	Code        string    `json:"code"        validate:"required,max=45"`
 	Name        string    `json:"name"        validate:"required,max=100"`
 	Description string    `json:"description" validate:"max=255"`
-	CourseID    uuid.UUID `json:"course_id"   validate:"required"`
 }
 
-type updateMatrixResponse struct {
-	UUID        uuid.UUID `json:"uuid"`
-	Code        string    `json:"code,omitempty"`
-	Name        string    `json:"name"`
-	Description string    `json:"description,omitempty"`
-	CreatedAt   time.Time `json:"created_at"`
-	UpdatedAt   time.Time `json:"updated_at"`
-	CourseID    uuid.UUID `json:"course_id"`
+type UpdateMatrixResponse struct {
+	Matrix *MatrixResponse `json:"matrix"`
 }
 
+// NewUpdateMatrixHandler updates new matrix handler
+// @Summary      Update matrix
+// @Description  Update a matrix
+// @Tags         matrices
+// @Accept       json
+// @Produce      json
+// @Param        uuid	  path      string  true  "Matrix UUID" Format(uuid)
+// @Param        matrix	  body		UpdateMatrixRequest		true	"Update Matrix"
+// @Success      200      {object}  UpdateMatrixResponse
+// @Failure      400      {object}  error
+// @Failure      404      {object}  error
+// @Failure      500      {object}  error
+// @Router       /matrices/{uuid} [put].
 func NewUpdateMatrixHandler(s domain.ServiceInterface, opts ...kithttp.ServerOption) *kithttp.Server {
 	return kithttp.NewServer(
 		makeUpdateMatrixEndpoint(s),
@@ -45,7 +50,7 @@ func NewUpdateMatrixHandler(s domain.ServiceInterface, opts ...kithttp.ServerOpt
 //nolint:dupl
 func makeUpdateMatrixEndpoint(s domain.ServiceInterface) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
-		req, ok := request.(updateMatrixRequest)
+		req, ok := request.(UpdateMatrixRequest)
 		if !ok {
 			return nil, fmt.Errorf("invalid argument")
 		}
@@ -55,23 +60,27 @@ func makeUpdateMatrixEndpoint(s domain.ServiceInterface) endpoint.Endpoint {
 			return nil, err
 		}
 
-		var m domain.Matrix
+		var matrix domain.Matrix
 		data, _ := json.Marshal(req)
-		if err := json.Unmarshal(data, &m); err != nil {
+		if err := json.Unmarshal(data, &matrix); err != nil {
 			return nil, err
 		}
 
-		if err := s.UpdateMatrix(ctx, &m); err != nil {
+		err := s.UpdateMatrix(ctx, &matrix)
+		if err != nil {
 			return nil, err
 		}
 
-		return updateMatrixResponse{
-			UUID:        m.UUID,
-			Name:        m.Name,
-			Description: m.Description,
-			CreatedAt:   m.CreatedAt,
-			UpdatedAt:   m.UpdatedAt,
-			CourseID:    m.CourseID,
+		return &UpdateMatrixResponse{
+			Matrix: &MatrixResponse{
+				UUID:        matrix.UUID,
+				CourseUUID:  matrix.CourseUUID,
+				Code:        matrix.Code,
+				Name:        matrix.Name,
+				Description: matrix.Description,
+				CreatedAt:   matrix.CreatedAt,
+				UpdatedAt:   matrix.UpdatedAt,
+			},
 		}, nil
 	}
 }
@@ -83,7 +92,7 @@ func decodeUpdateMatrixRequest(_ context.Context, r *http.Request) (interface{},
 		return nil, fmt.Errorf("invalid argument")
 	}
 
-	var req updateMatrixRequest
+	var req UpdateMatrixRequest
 	err := json.NewDecoder(r.Body).Decode(&req)
 	if err != nil {
 		return nil, err
